[gd_scene load_steps=2 format=3 uid="uid://byw6o3p8vmjm"]

[ext_resource type="Script" uid="uid://chu5nnsnj8bul" path="res://Scripts/Menyer/ClassSelection.gd" id="1"]

[node name="ClassSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Choose Your Class"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassListContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ClassInfoPanel" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClassNameLabel" type="Label" parent="VBoxContainer/HBoxContainer/ClassInfoPanel"]
layout_mode = 2
text = "Select a Class"

[node name="ClassDescriptionLabel" type="Label" parent="VBoxContainer/HBoxContainer/ClassInfoPanel"]
layout_mode = 2
text = "Choose your character class to begin your adventure."
autowrap_mode = 2

[node name="ClassStatsLabel" type="Label" parent="VBoxContainer/HBoxContainer/ClassInfoPanel"]
layout_mode = 2
autowrap_mode = 2

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="SelectButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
disabled = true
text = "Select Class"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back to Menu"
